methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: type mismatch;
 found   : Unit
 required: Boolean
                               while (!isOverBaggle()) {while (!test) {right(); forward()}; forward()}
                               ^